--- a/build.xml
+++ b/build.xml
@@ -19,14 +19,17 @@
 
   <target name="javac" description="Compile java source to bytecode">
     <mkdir dir="war/WEB-INF/classes"/>
-    <javac srcdir="src" includes="**" encoding="utf-8"
+    <javac includes="**" encoding="utf-8"
         destdir="war/WEB-INF/classes"
         source="1.5" target="1.5" nowarn="true"
         debug="true" debuglevel="lines,vars,source">
+      <src path="src"/>
+      <src path="boilerpipe-core/src/main"/>
       <classpath refid="project.class.path"/>
     </javac>
     <copy todir="war/WEB-INF/classes">
       <fileset dir="src" excludes="**/*.java"/>
+      <fileset dir="boilerpipe-core/src/main" excludes="**/*.java"/>
     </copy>
   </target>
 
@@ -34,6 +37,7 @@
     <java failonerror="true" fork="true" classname="com.google.gwt.dev.Compiler">
       <classpath>
         <pathelement location="src"/>
+        <pathelement location="boilerpipe-core/src/main"/>
         <path refid="project.class.path"/>
         <pathelement location="third_party/gwt-2.5.1/validation-api-1.0.0.GA.jar" />
         <pathelement location="third_party/gwt-2.5.1/validation-api-1.0.0.GA-sources.jar" />
@@ -50,6 +54,7 @@
     <java failonerror="true" fork="true" classname="com.google.gwt.dev.DevMode">
       <classpath>
         <pathelement location="src"/>
+        <pathelement location="boilerpipe-core/src/main"/>
         <path refid="project.class.path"/>
       </classpath>
       <jvmarg value="-Xmx256M"/>
