Add image extraction
This adds ImageExtractor. This class takes an ordered list of nodes and
will walk the dom and identify all images that appear immediately after
one of those nodes (i.e. there is no non-whitespace text nodes between
them).

R=nyquist@chromium.org

Review URL: https://codereview.appspot.com/50060049

--- a/build.xml
+++ b/build.xml
@@ -128,7 +128,7 @@
       <formatter type="plain" />
       <formatter type="xml" />
     </junit>
-    <fail message="Test failure detected." if="test.dev.failed" />
+    <fail message="Test failure detected (test.dev)." if="test.dev.failed" />
   </target>
 
   <target name="test.prod" depends="javac.tests" description="Run production mode tests">
@@ -153,7 +153,7 @@
       <formatter type="plain" />
       <formatter type="xml" />
     </junit>
-    <fail message="Test failure detected." if="test.prod.failed" />
+    <fail message="Test failure detected (test.prod)." if="test.prod.failed" />
   </target>
 
   <target name="test" description="Run development and production mode tests">
