--- a/build.xml
+++ b/build.xml
@@ -43,8 +43,6 @@
     <pathelement location="out/test/proto" />
   </path>
 
-  <property name="test.filter" value="*" />
-
   <union id="project.non.java.files">
     <fileset dir="boilerpipe-core/src/main" excludes="**/*.java"/>
     <fileset dir="src" excludes="**/*.java"/>
@@ -215,6 +213,39 @@
       </classpath>
       <batchtest todir="out/reports/htmlunit.dev" >
         <fileset dir="test" >
+          <include name="**/DomDistillerTestSuite.java" />
+        </fileset>
+      </batchtest>
+      <formatter type="plain" />
+      <formatter type="xml" />
+    </junit>
+    <fail message="Test failure detected (test.dev)." if="test.dev.failed" />
+  </target>
+
+  <target name="singletest.dev" depends="javac.tests" description="Run development mode tests">
+    <fail message="You must specify a value for test.filter with -Dtest.filter=">
+      <condition>
+        <not>
+          <isset property="test.filter"/>
+        </not>
+      </condition>
+    </fail>
+    <mkdir dir="out/reports/htmlunit.dev" />
+    <junit fork="yes" printsummary="yes" haltonfailure="no" failureproperty="test.dev.failed">
+      <jvmarg line="-Xmx256m" />
+      <sysproperty key="gwt.args" value="-standardsMode -logLevel WARN" />
+      <sysproperty key="java.awt.headless" value="true" />
+      <classpath>
+        <path refid="project.class.path" />
+        <path refid="project.java.path" />
+        <path refid="project.java.test.path" />
+        <path refid="protoc.test.java.output" />
+        <pathelement location="third_party/gwt-2.5.1/validation-api-1.0.0.GA.jar" />
+        <pathelement location="third_party/gwt-2.5.1/validation-api-1.0.0.GA-sources.jar" />
+        <pathelement location="third_party/junit/junit-4.11.jar" />
+      </classpath>
+      <batchtest todir="out/reports/htmlunit.dev" >
+        <fileset dir="test" >
           <include name="**/${test.filter}Test.java" />
         </fileset>
       </batchtest>
@@ -241,7 +272,7 @@
       </classpath>
       <batchtest todir="out/reports/htmlunit.prod" >
         <fileset dir="test" >
-          <include name="**/${test.filter}Test.java" />
+          <include name="**/DomDistillerTestSuite.java" />
         </fileset>
       </batchtest>
       <formatter type="plain" />
@@ -250,9 +281,45 @@
     <fail message="Test failure detected (test.prod)." if="test.prod.failed" />
   </target>
 
+  <target name="singletest.prod" depends="javac.tests" description="Run production mode tests">
+    <fail message="You must specify a value for test.filter with -Dtest.filter=">
+      <condition>
+        <not>
+          <isset property="test.filter"/>
+        </not>
+      </condition>
+    </fail>
+    <mkdir dir="out/reports/htmlunit.prod" />
+    <junit fork="yes" printsummary="yes" haltonfailure="no" failureproperty="test.prod.failed">
+      <jvmarg line="-Xmx256m" />
+      <sysproperty key="gwt.args" value="-prod -standardsMode -logLevel WARN -out out/www-test" />
+      <sysproperty key="java.awt.headless" value="true" />
+      <classpath>
+        <path refid="project.class.path" />
+        <path refid="project.java.path" />
+        <path refid="project.java.test.path" />
+        <path refid="protoc.test.java.output" />
+        <pathelement location="third_party/gwt-2.5.1/validation-api-1.0.0.GA.jar" />
+        <pathelement location="third_party/gwt-2.5.1/validation-api-1.0.0.GA-sources.jar" />
+        <pathelement location="third_party/junit/junit-4.11.jar" />
+      </classpath>
+      <batchtest todir="out/reports/htmlunit.prod" >
+        <fileset dir="test" >
+          <include name="**/${test.filter}Test.java" />
+        </fileset>
+      </batchtest>
+      <formatter type="plain" />
+      <formatter type="xml" />
+    </junit>
+    <fail message="Test failure detected (test.prod)." if="test.prod.failed" />
+  </target>
   <target name="test" description="Run development and production mode tests">
     <antcall target="test.dev" />
     <antcall target="test.prod" />
+  </target>
+  <target name="singletest" description="Run an individual test in development and production mode">
+    <antcall target="singletest.dev" />
+    <antcall target="singletest.prod" />
   </target>
 
   <target name="build" depends="gwtc" description="Build this project" />
