--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 DomDistiller.war
-gwt-unitCache/
-out/
-war/WEB-INF/
-war/domdistiller
-war/*.JUnit/
+/gwt-unitCache/
+/out/
+/war/WEB-INF/
+/war/domdistiller
+/war/*.JUnit/
 .*.swp
 *.pyc
 junitvmwatcher*.properties
