--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,7 @@
  found in the LICENSE file.
 -->
 <project name="DomDistiller" default="build" basedir=".">
+  <property environment="env"/>
   <!-- Arguments to gwtc and devmode targets -->
   <property name="gwt.args" value="-XclosureCompiler" />
   <property name="gwt.test.args" value="-XnoclosureCompiler -optimize 0 -style DETAILED"/>
@@ -214,6 +215,12 @@
     </exec>
   </target>
 
+  <target name="jstests" depends="extractjs.jstests" description="Generates test proto code">
+    <exec executable="xvfb-run" failonerror="true">
+      <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
+      <arg value="./run_jstests.py"/>
+    </exec>
+  </target>
 
   <target name="test.dev" depends="javac.tests" description="Run development mode tests">
     <mkdir dir="out/reports/htmlunit.dev" />
@@ -352,7 +359,7 @@
   </target>
 
   <target name="test"
-    depends="package, extractjs.jstests, test.dev,test.prod"
+    depends="package, jstests, test.dev, test.prod"
     description="Run development and production mode tests">
   </target>
 
@@ -374,6 +381,7 @@
   <target name="clean" description="Cleans this project">
     <delete dir="war/WEB-INF" failonerror="false" />
     <delete dir="war/domdistiller" failonerror="false" />
+    <delete dir="war/domdistillerjs" failonerror="false" />
     <delete file="war/DomDistiller.war" failonerror="false" />
     <delete dir="gwt-unitCache" failonerror="false" />
     <delete dir="out" failonerror="false" />
