--- a/build.xml
+++ b/build.xml
@@ -216,7 +216,7 @@
   </target>
 
   <target name="jstests" depends="extractjs.jstests" description="Generates test proto code">
-    <exec executable="python" failonerror="false">
+    <exec executable="xvfb-run" failonerror="true">
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
       <arg value="./run_jstests.py"/>
     </exec>
