Flesh out jstest environment
Adds SetUp/TearDown to JsTestCase and calls them as appropriate
in the test runner.

Adds a way to run a subset of the tests (though this isn't actually
hooked up to run_tests.py or `ant test` yet).

Adds reporting of # of tests, # failed, # skipped and total time (very
similar to the final line of the gwt tests output).

BUG=440102
R=mdjones@chromium.org

Review URL: https://codereview.chromium.org/807763002

--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
   <!-- Arguments to gwtc and devmode targets -->
   <property name="gwt.args" value="-XclosureCompiler" />
   <property name="gwt.test.args" value="-XnoclosureCompiler -optimize 0 -style DETAILED"/>
-  <property name="gwt.shared.args" value="-war war -XjsInteropMode JS -gen out/gen" />
+  <property name="gwt.shared.args" value="-failOnError -war war -XjsInteropMode JS -gen out/gen" />
   <property name="gwt.custom.args" value="" />
 
   <!-- Configure path to GWT SDK -->
@@ -359,7 +359,7 @@
   </target>
 
   <target name="test"
-    depends="package, jstests, test.dev, test.prod"
+    depends="jstests, test.dev, test.prod, package"
     description="Run development and production mode tests">
   </target>
 
