Add some more fancy gwt flags
-XnoclassMetadata removes some class metadata from all classes (like
    Class.getName() will return an obfuscated name). This primarily
    saves a small bit of size (-7.5%).
-XnocheckCasts removes checking of type casts. Without this, any cast
    requires a (relatively) expensive check to properly throw a
    ClassCastException. With this flag, it will just blindly be "cast"
    to the new type which may then fail later on with a less diagnosable
    message. This is a non-trivial performance win (-4.5%).

BUG=440977
R=nyquist@chromium.org

Review URL: https://codereview.chromium.org/808793003

--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 <project name="DomDistiller" default="build" basedir=".">
   <property environment="env"/>
   <!-- Arguments to gwtc and devmode targets -->
-  <property name="gwt.args" value="-XclosureCompiler" />
+  <property name="gwt.args" value="-XclosureCompiler -XnoclassMetadata -XnocheckCasts -style OBF" />
   <property name="gwt.test.args" value="-XnoclosureCompiler -optimize 0 -style DETAILED"/>
   <property name="gwt.shared.args" value="-failOnError -war war -XjsInteropMode JS -gen out/gen" />
   <property name="gwt.custom.args" value="" />
